[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/misc/Enemy.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/EnemyOwner.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.1545, 6.09202 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.109804, 0.45098, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.27451, 0.27451, 0.27451, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 289.954

[node name="Enemy" type="Node2D"]
script = ExtResource( 3 )

[node name="Enemy" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Enemy"]
modulate = Color( 0.717647, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="Enemy"]
priority = 1.0
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Hitbox"]
shape = SubResource( 2 )

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -24.478
margin_right = 25.0
margin_bottom = -14.478
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AggroArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource( 3 )
[connection signal="body_entered" from="Enemy/Hitbox" to="Enemy" method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="AggroArea" to="Enemy" method="_on_AggroArea_body_entered"]
[connection signal="body_exited" from="AggroArea" to="Enemy" method="_on_AggroArea_body_exited"]
